update demos