@@ -8,7 +8,7 @@ import java.util.List;
  * <p>
  * 错误现象：java.lang.OutOfMemoryError: Java heap space
  * <p>
- * VM Args：-verbose:gc -Xms10M -Xmx10M -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError
+ * VM Args：-verbose:gc -Xms10M -Xmx10M -XX:+HeapDumpOnOutOfMemoryError
  *
  * @author <a href="mailto:forbreak@163.com">Zhang Peng</a>
  * @since 2019-06-25
